@@ -51,6 +51,7 @@ static SCIP_Bool falseptr = FALSE;
 static SCIP_Bool trueptr = TRUE;
 static SCIP_Bool solisachieved = FALSE;      /**< means if current best solution is better than the given debug solution */
 static SCIP_Real debugsolval = 0.0;          /**< objective value for debug solution */
+static SCIP_Bool debugsoldisabled = FALSE;   /**< flag indicating if debugging of solution was disabled or not */
 
 /** reads solution from given file into given arrays */
 static
@@ -487,6 +488,10 @@ SCIP_RETCODE SCIPdebugCheckRow(
    assert(set != NULL);
    assert(row != NULL);
 
+   /* when debugging was disabled the solution is not defined to be not valid in the current subtree */
+   if( debugsoldisabled )
+      return SCIP_OKAY;
+
    /* check if we are in the original problem and not in a sub MIP */
    if( !isSolutionInMip(set) )
       return SCIP_OKAY;
@@ -578,6 +583,10 @@ SCIP_RETCODE SCIPdebugCheckLbGlobal(
    assert(set != NULL);
    assert(var != NULL);
 
+   /* when debugging was disabled the solution is not defined to be not valid in the current subtree */
+   if( debugsoldisabled )
+      return SCIP_OKAY;
+
    /* check if we are in the original problem and not in a sub MIP */
    if( !isSolutionInMip(set) )
       return SCIP_OKAY;
@@ -611,6 +620,10 @@ SCIP_RETCODE SCIPdebugCheckUbGlobal(
 
    assert(set != NULL);
    assert(var != NULL);
+
+   /* when debugging was disabled the solution is not defined to be not valid in the current subtree */
+   if( debugsoldisabled )
+      return SCIP_OKAY;
 
    /* check if we are in the original problem and not in a sub MIP */
    if( !isSolutionInMip(set) )
@@ -651,6 +664,10 @@ SCIP_RETCODE SCIPdebugCheckInference(
    assert(blkmem != NULL);
    assert(node != NULL);
    assert(var != NULL);
+
+   /* when debugging was disabled the solution is not defined to be not valid in the current subtree */
+   if( debugsoldisabled )
+      return SCIP_OKAY;
 
    /* in case we are in probing or diving we have to avoid checking the solution */
    if( SCIPlpDiving(set->scip->lp) || SCIPtreeProbing(set->scip->tree) )
@@ -700,6 +717,10 @@ SCIP_RETCODE SCIPdebugRemoveNode(
    assert(set != NULL);
    assert(blkmem != NULL);
    assert(node != NULL);
+
+   /* when debugging was disabled the solution is not defined to be not valid in the current subtree */
+   if( debugsoldisabled )
+      return SCIP_OKAY;
 
    /* check if we are in the original problem and not in a sub MIP */
    if( !isSolutionInMip(set) )
@@ -752,6 +773,10 @@ SCIP_RETCODE SCIPdebugCheckVbound(
    assert(set != NULL);
    assert(var != NULL);
 
+   /* when debugging was disabled the solution is not defined to be not valid in the current subtree */
+   if( debugsoldisabled )
+      return SCIP_OKAY;
+
    /* check if we are in the original problem and not in a sub MIP */
    if( !isSolutionInMip(set) )
       return SCIP_OKAY;
@@ -797,6 +822,10 @@ SCIP_RETCODE SCIPdebugCheckImplic(
    assert(var != NULL);
    assert(SCIPvarGetType(var) == SCIP_VARTYPE_BINARY);
 
+   /* when debugging was disabled the solution is not defined to be not valid in the current subtree */
+   if( debugsoldisabled )
+      return SCIP_OKAY;
+
    /* check if we are in the original problem and not in a sub MIP */
    if( !isSolutionInMip(set) )
       return SCIP_OKAY;
@@ -809,7 +838,7 @@ SCIP_RETCODE SCIPdebugCheckImplic(
    SCIP_CALL( getSolutionValue(set, var, &solval) );
    if( solval == SCIP_UNKNOWN ) /*lint !e777*/
       return SCIP_OKAY;
-   assert(SCIPsetIsFeasEQ(set, solval, 0.0) || SCIPsetIsFeasEQ(set, solval, 1.0));
+   assert(SCIPsetIsFeasZero(set, solval) || SCIPsetIsFeasEQ(set, solval, 1.0));
 
    /* check, whether the implication applies for the debugging solution */
    if( (solval > 0.5) != varfixing )
@@ -842,6 +871,79 @@ SCIP_RETCODE SCIPdebugCheckImplic(
    return SCIP_OKAY;
 }
 
+/** check whether given clique is valid for the debugging solution */
+SCIP_RETCODE SCIPdebugCheckClique(
+   SCIP_SET*             set,                /**< global SCIP settings */
+   SCIP_VAR**            vars,               /**< binary variables in the clique: at most one can be set to the given value */
+   SCIP_Bool*            values,             /**< values of the variables in the clique; NULL to use TRUE for all vars */
+   int                   nvars               /**< number of variables in the clique */
+   )
+{
+   SCIP_Real solval;
+   int pos1;
+   int pos2;
+   int v;
+
+   assert(set != NULL);
+   assert(vars != NULL);
+
+   /* when debugging was disabled the solution is not defined to be not valid in the current subtree */
+   if( debugsoldisabled )
+      return SCIP_OKAY;
+
+   /* check if we are in the original problem and not in a sub MIP */
+   if( !isSolutionInMip(set) )
+      return SCIP_OKAY;
+
+   /* check if the incumbent solution is at least as good as the debug solution, so we can stop to check the debug solution */
+   if( debugSolIsAchieved(set) )
+      return SCIP_OKAY;
+
+   pos1 = -1;
+   pos2 = -1;
+
+   for( v = 0; v < nvars; ++v )
+   {
+      assert(vars[v] != NULL);
+      assert(SCIPvarIsBinary(vars[v]));
+
+      /* get solution value of variable */
+      SCIP_CALL( getSolutionValue(set, vars[v], &solval) );
+
+      if( solval == SCIP_UNKNOWN ) /*lint !e777*/
+         continue;
+
+      assert(SCIPsetIsFeasZero(set, solval) || SCIPsetIsFeasEQ(set, solval, 1.0));
+
+      /* negated solution value if negated variable is in clique */
+      if( values != NULL && values[v] == 0 )
+         solval = 1.0 - solval;
+
+      if( SCIPsetIsFeasEQ(set, solval, 1.0) )
+      {
+         if( pos1 == -1 )
+            pos1 = v;
+         else
+         {
+            assert(pos2 == -1);
+            pos2 = v;
+            break;
+         }
+      }
+   }
+
+   /* print debug message if the clique violates the debugging solution */
+   if( pos2 != -1 )
+   {
+      assert(pos1 != -1);
+      SCIPerrorMessage("clique violates debugging solution, (at least) variable <%s%s> and variable <%s%s> are both one in the debugging solution\n",
+         (values == NULL || values[pos1]) ? "" : "~", SCIPvarGetName(vars[pos1]), (values == NULL || values[pos2]) ? "" : "~", SCIPvarGetName(vars[pos2]));
+      SCIPABORT();
+   }
+
+   return SCIP_OKAY;
+}
+
 /** checks whether given conflict is valid for the debugging solution */
 SCIP_RETCODE SCIPdebugCheckConflict(
    BMS_BLKMEM*           blkmem,             /**< block memory */
@@ -860,6 +962,10 @@ SCIP_RETCODE SCIPdebugCheckConflict(
    assert(blkmem != NULL);
    assert(node != NULL);
    assert(nbdchginfos == 0 || bdchginfos != NULL);
+
+   /* when debugging was disabled the solution is not defined to be not valid in the current subtree */
+   if( debugsoldisabled )
+      return SCIP_OKAY;
 
    /* check if we are in the original problem and not in a sub MIP */
    if( !isSolutionInMip(set) )
@@ -932,6 +1038,64 @@ SCIP_RETCODE SCIPdebugCheckConflict(
    return SCIP_OKAY; /*lint !e527*/
 }
 
+
+/** check whether the debugging solution is valid in the current node */
+SCIP_RETCODE SCIPdebugSolIsValidInSubtree(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_Bool*            isvalidinsubtree    /**< pointer to store whether the solution is valid in the current
+                                              *   subtree
+                                              */
+   )
+{
+   SCIP_Bool solcontained;
+
+   *isvalidinsubtree = FALSE;
+
+   /* when debugging was disabled the solution is not defined to be not valid in the current subtree */
+   if( debugsoldisabled )
+      return SCIP_OKAY;
+
+   /* check if we are in the original problem and not in a sub MIP */
+   if( !isSolutionInMip(scip->set) )
+      return SCIP_OKAY;
+
+   /* check if the incumbent solution is at least as good as the debug solution, so we can stop to check the debug solution */
+   if( debugSolIsAchieved(scip->set) )
+      return SCIP_OKAY;
+
+   /* check whether the debugging solution is contained in the local subproblem */
+   SCIP_CALL( isSolutionInNode(SCIPblkmem(scip), scip->set, SCIPgetCurrentNode(scip), &solcontained) );
+
+   if( solcontained )
+      *isvalidinsubtree = TRUE;
+
+   return SCIP_OKAY;
+}
+
+
+/** enabling solution debugging mechanism */
+void SCIPdebugSolEnable(
+   SCIP*                 scip                /**< SCIP data structure */
+   )
+{
+   debugsoldisabled = FALSE;
+}
+
+/** disabling solution debugging mechanism */
+void SCIPdebugSolDisable(
+   SCIP*                 scip                /**< SCIP data structure */
+   )
+{
+   debugsoldisabled = TRUE;
+}
+
+/** check if solution debugging mechanism is enabled */
+SCIP_Bool SCIPdebugSolIsEnabled(
+   SCIP*                 scip                /**< SCIP data structure */
+   )
+{
+   return (!debugsoldisabled);
+}
 
 /** propagator to force finding the debugging solution */
 static
