@@ -32,6 +32,7 @@
 #include "scip/implics.h"
 #include "scip/pub_message.h"
 #include "scip/pub_misc.h"
+#include "scip/debug.h"
 
 #ifndef NDEBUG
 #include "scip/struct_implics.h"
@@ -1783,6 +1784,9 @@ SCIP_RETCODE SCIPcliquetableAdd(
    SCIP_CALL( cliquetableEnsureSize(cliquetable, set, cliquetable->ncliques+1) );
    cliquetable->cliques[cliquetable->ncliques] = clique;
    cliquetable->ncliques++;
+
+   /* check clique on debugging solution */
+   SCIP_CALL( SCIPdebugCheckClique(set, vars, values, nvars) ); /*lint !e506 !e774*/
 
    /* add the corresponding active problem variables to the clique */
    for( i = 0; i < nvars; ++i )
